--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #2fe6c7;
     position: absolute;
     left: 0%;
     bottom: -6px;
@@ -66,9 +66,21 @@ nav ul li a:hover::after{
 }
 /*------------about------------ */
 #about{
-    padding: 80px 0;
-    color: ababab;
+    padding: 100px 0;
+    color: #f5f0f0;
 }
+#about .sub-title {
+    font-size: 40px;
+}
+
+#about p {
+    font-size: 29px;
+}
+
+#about ul li {
+    font-size: 16px;
+}
+
 .row{
     display: flex;
     justify-content: space-between;
@@ -119,7 +131,7 @@ nav ul li a:hover::after{
 }
 .tab-contents ul li span{
     color: #b54769;
-    font-size: 14px;
+    font-size: 16px;
 }
 .tab-contents{
     display: none;
@@ -140,7 +152,7 @@ nav ul li a:hover::after{
 .services-list div{
     background: #262626;
     padding: 40px;
-    font-size: 13px;
+    font-size: 17px;
     font-weight: 300;
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
@@ -157,34 +169,15 @@ nav ul li a:hover::after{
 .services-list div a{
     text-decoration: none;
     color: #fff;
-    font-size: 12px;
+    font-size: 10px;
     margin-top: 20px;
     display: inline-block;
 }
 .services-list div:hover{
-    background: #20e7e7;
+    background: #07858a;
     transform: translateY(-10px);
 }
-/*------------portfolio------------*/
-#portfolio{
-    padding: 50px 0;
-}
-.project-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
-}
-.project{
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-}
-.project img{
-    width: 100%;
-    border-radius: 10px;
-    display: block;
-}
+
 /*--------------contact------------*/
 .contact-left{
     flex-basis: 35%;
@@ -196,7 +189,7 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 .contact-left p i{
-    color: #ff004f;
+    color: #34dbcd;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -207,17 +200,17 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 35px;
     margin-right: 15px;
-    color: #ababab;
+    color: #837c80;
     display: inline-block;
     transition: transform 0.5s;
 }
 .social-icons a:hover{
-    color: #ff004f;
+    color: #31f7f7;
     transform: translateY(-5px);
 }
 .btn.btn2{
     display: inline-block;
-    background: #ff004f
+    background: #26e7d7;
 }
 .contact-right form{
     width: 100%;
@@ -234,7 +227,7 @@ form input, form textarea{
     border-radius: 6px;
 }
 form .btn2{
-    padding: 14px;
+    padding: 15px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
@@ -250,7 +243,23 @@ form .btn2{
 .copyright i{
     color: #ff004f;
 }
-.dark-mode {
-    background-color: #333;
-    color: #fff;
+
+#msg{
+    color: #61b752;
+    margin-top: -20px;
+    display: bottom;
+}
+.sub-title {
+    font-size: 24px; 
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.schedule-info p {
+    font-size: 16px; 
+    margin-bottom: 20px;
+}
+
+.schedule-info .btn2 {
+    font-size: 18px; 
 }
